--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-transition-group": "^4.4.5",
+    "react-typical": "^0.1.3",
     "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
