--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/react-transition-group": "^4.4.12",
     "framer-motion": "^12.23.6",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
